samples/_failures_safe/1761249513_2c2901_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a70b977.c: In function ‘main’:
./samples/SAFE/__tmp_1a70b977.c:173: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_1a70b977.c:172:9: error: expected declaration or statement at end of input
  172 |         if
      |         ^~
./samples/SAFE/__tmp_1a70b977.c:172:9: error: expected declaration or statement at end of input
